# messaging_system

./: .gitignore  README.md  environment_compose.yaml
docs/: messaging_system.drawio
messaging_api/: Dockerfile  Pipfile  pyproject.toml
messaging_api/messaging_api/: __init__.py  __main__.py  app.py  config.py
messaging_api/messaging_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
messaging_api/messaging_api/core/: __init__.py  api_layer.py  storage.py  system_db.py
messaging_api/messaging_api/exceptions/: __init__.py  exception_handlers.py  exceptions.py
messaging_api/messaging_api/routers/: system_endpoints.py
messaging_api/messaging_api/schema/: __init__.py  chat.py  message.py  request_body.py  user.py
messaging_api/source/: __init__.py
messaging_api/source/core/: __init__.py  api_layer.py
messaging_api/source/schema/: chat.py  message.py  user.py
